@@ -37,7 +37,6 @@ import java.util.HashMap;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 import javax.servlet.http.HttpServletRequest;
 
@@ -143,6 +142,6 @@ public class ActionChainHelper {
                     tuple.addProperty("id", ac.getId());
                     tuple.addProperty("text", ac.getLabel());
                     return tuple;
-                }).collect(Collectors.toList()));
+                }).toList());
     }
 }
