@@ -358,9 +358,9 @@ public class UpgradeCommand extends BaseTransactionCommand {
         try {
             List<MinionServer> virtHosts = MinionServerFactory.listMinions().stream()
                     .filter(Server::hasVirtualizationEntitlement)
-                    .collect(Collectors.toList());
+                    .toList();
             virtHosts.forEach(MinionPillarManager.INSTANCE::generatePillar);
-            List<String> minionIds = virtHosts.stream().map(MinionServer::getMinionId).collect(Collectors.toList());
+            List<String> minionIds = virtHosts.stream().map(MinionServer::getMinionId).toList();
             GlobalInstanceHolder.SALT_API.refreshPillar(new MinionList(minionIds));
             log.warn("Refreshed virtualization hosts pillar");
         }
@@ -376,7 +376,7 @@ public class UpgradeCommand extends BaseTransactionCommand {
         try {
             List<MinionServer> hosts = MinionServerFactory.listMinions();
             hosts.forEach(MinionPillarManager.INSTANCE::generatePillar);
-            List<String> minionIds = hosts.stream().map(MinionServer::getMinionId).collect(Collectors.toList());
+            List<String> minionIds = hosts.stream().map(MinionServer::getMinionId).toList();
             GlobalInstanceHolder.SALT_API.refreshPillar(new MinionList(minionIds));
             log.info("Refreshed hosts pillar");
         }
@@ -397,7 +397,7 @@ public class UpgradeCommand extends BaseTransactionCommand {
     private void allSystemsSyncAll() {
         try {
             List<String> minionIds = MinionServerFactory.listMinions()
-                    .stream().map(MinionServer::getMinionId).collect(Collectors.toList());
+                    .stream().map(MinionServer::getMinionId).toList();
             GlobalInstanceHolder.SALT_API.syncAllAsync(new MinionList(minionIds));
             log.info("Sync all scheduled on all systems");
         }
